test/users/shetag/iteratorWithOn.good
iteratorWithOn.chpl:5: In iterator 'g':
iteratorWithOn.chpl:8: error: invalid use of 'on' in serial iterator
